[package]
name = "functionstomping"
version = "0.1.0"
authors = ["Idov31 <github.com/idov31>"]
edition = "2021"

[[bin]]
name = "functionstomping"
path = "src/functionstomping.rs"

[lib]
name = "functionstompinglib"
path = "src/functionstomping-lib.rs"
crate-type = ["lib"]

[dependencies]
winapi = {version = "0.3.9", features = ["winuser", "wincontypes", "processthreadsapi", "memoryapi", "handleapi", "libloaderapi", "psapi"]}
win32-error = "0.9.0"
widestring = "0.5.1"
libc = "0.2.115"
thiserror = "1.0.30"
anyhow = "1.0.53"